Added pre authenticated header filter