@@ -9,12 +9,12 @@ import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.crypto.password.Pbkdf2PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.preauth.RequestHeaderAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 
-import java.util.List;
+import java.util.Collections;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 import static org.springframework.security.config.http.SessionCreationPolicy.IF_REQUIRED;
@@ -37,10 +37,12 @@ public class SecurityConfig {
                         .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
                         .requestMatchers("/books").permitAll()
                         .requestMatchers("/orders/header").authenticated()
-                        .requestMatchers("/orders/basic").authenticated())
+                        .requestMatchers("/orders/basic").authenticated()
+                        .requestMatchers("/orders/header-new").authenticated())
                 .sessionManagement(session -> session.sessionCreationPolicy(IF_REQUIRED)
                         .maximumSessions(1))
                 .addFilterBefore(customHeaderFilter(), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(requestHeaderAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .authenticationManager(authManager())
                 .httpBasic(withDefaults())
@@ -54,6 +56,17 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authManager() {
-        return new ProviderManager(List.of(bookstoreBasicAuthProvider));
+        return new ProviderManager(Collections.singletonList(bookstoreBasicAuthProvider));
+    }
+
+    @Bean
+    public RequestHeaderAuthenticationFilter requestHeaderAuthenticationFilter() {
+        RequestHeaderAuthenticationFilter filter = new RequestHeaderAuthenticationFilter();
+        filter.setPrincipalRequestHeader("AUTH_KEY");
+        filter.setCredentialsRequestHeader("RUMBATA");
+        filter.setExceptionIfHeaderMissing(true);
+        filter.setRequiresAuthenticationRequestMatcher(new AntPathRequestMatcher("/orders/header-new"));
+        filter.setAuthenticationManager(authManager());
+        return filter;
     }
 }
